--- a/nbs/core/manager.ipynb
+++ b/nbs/core/manager.ipynb
@@ -238,23 +238,13 @@
    "source": [
     "#| export\n",
     "class ResourceManager:\n",
-    "    \"\"\"\n",
-    "    Manages resource tracking and conflict detection for the application.\n",
-    "    \n",
-    "    Tracks PIDs associated with application workers (transcription, LLM, etc.)\n",
-    "    and provides methods to check resource availability and conflicts.\n",
-    "    \n",
-    "    Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Manages resource tracking and conflict detection for the application. Tracks PIDs associated with application workers (transcription, LLM, etc.) and provides methods to check resource availability and conflicts. Enhanced to support lifecycle-aware and cloud-aware plugins from cjm-fasthtml-plugins.\"\"\"\n",
     "\n",
-    "    def __init__(self, gpu_memory_threshold_percent: float = 45.0):\n",
-    "        \"\"\"\n",
-    "        Initialize the resource manager.\n",
-    "        \n",
-    "        Args:\n",
-    "            gpu_memory_threshold_percent: GPU memory usage threshold (default 45%)\n",
-    "                External processes using more than this percentage are considered conflicts\n",
-    "        \"\"\"\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        gpu_memory_threshold_percent:float=45.0 # GPU memory usage threshold; external processes using more than this percentage are considered conflicts\n",
+    "    ):\n",
+    "        \"\"\"Initialize the resource manager.\"\"\"\n",
     "        self._worker_states: Dict[int, WorkerState] = {}  # pid -> WorkerState\n",
     "        self._job_to_pid: Dict[str, int] = {}  # job_id -> pid\n",
     "        self._child_to_parent: Dict[int, int] = {}  # child_pid -> parent_pid\n",
@@ -262,28 +252,16 @@
     "\n",
     "    def register_worker(\n",
     "        self,\n",
-    "        pid: int,\n",
-    "        worker_type: str,\n",
-    "        job_id: Optional[str] = None,\n",
-    "        plugin_id: Optional[str] = None,\n",
-    "        plugin_name: Optional[str] = None,\n",
-    "        loaded_plugin_resource: Optional[str] = None,\n",
-    "        config: Optional[Dict[str, Any]] = None,\n",
-    "        plugin_instance: Optional[Any] = None  # NEW: Optional plugin instance for lifecycle/cloud detection\n",
-    "    ) -> None:\n",
-    "        \"\"\"\n",
-    "        Register a worker process with the resource manager.\n",
-    "        \n",
-    "        Args:\n",
-    "            pid: Process ID of the worker\n",
-    "            worker_type: Type of worker (e.g., \"transcription\", \"llm\")\n",
-    "            job_id: Optional job ID if worker is processing a job\n",
-    "            plugin_id: Optional plugin unique ID\n",
-    "            plugin_name: Optional plugin name\n",
-    "            loaded_plugin_resource: Optional identifier of the loaded plugin resource\n",
-    "            config: Optional plugin configuration\n",
-    "            plugin_instance: Optional plugin instance for lifecycle/cloud protocol detection\n",
-    "        \"\"\"\n",
+    "        pid:int, # Process ID of the worker\n",
+    "        worker_type:str, # Type of worker (e.g., \"transcription\", \"llm\")\n",
+    "        job_id:Optional[str]=None, # Optional job ID if worker is processing a job\n",
+    "        plugin_id:Optional[str]=None, # Optional plugin unique ID\n",
+    "        plugin_name:Optional[str]=None, # Optional plugin name\n",
+    "        loaded_plugin_resource:Optional[str]=None, # Optional identifier of the loaded plugin resource\n",
+    "        config:Optional[Dict[str, Any]]=None, # Optional plugin configuration\n",
+    "        plugin_instance:Optional[Any]=None # Optional plugin instance for lifecycle/cloud protocol detection\n",
+    "    ):\n",
+    "        \"\"\"Register a worker process with the resource manager.\"\"\"\n",
     "        # Create base worker state\n",
     "        worker = WorkerState(\n",
     "            pid=pid,\n",
@@ -343,15 +321,11 @@
     "        if job_id:\n",
     "            self._job_to_pid[job_id] = pid\n",
     "    \n",
-    "    def get_all_related_pids(self, parent_pid: int) -> List[int]:\n",
-    "        \"\"\"Get parent PID and all child PIDs managed by this worker.\n",
-    "        \n",
-    "        Args:\n",
-    "            parent_pid: Parent worker PID\n",
-    "        \n",
-    "        Returns:\n",
-    "            List of all PIDs (parent + children)\n",
-    "        \"\"\"\n",
+    "    def get_all_related_pids(\n",
+    "        self,\n",
+    "        parent_pid:int # Parent worker PID\n",
+    "    ) -> List[int]: # List of all PIDs (parent + children)\n",
+    "        \"\"\"Get parent PID and all child PIDs managed by this worker.\"\"\"\n",
     "        worker = self._worker_states.get(parent_pid)\n",
     "        if not worker:\n",
     "            return [parent_pid]\n",
@@ -359,26 +333,15 @@
     "\n",
     "    def update_worker_state(\n",
     "        self,\n",
-    "        pid: int,\n",
-    "        job_id: Optional[str] = None,\n",
-    "        plugin_id: Optional[str] = None,\n",
-    "        plugin_name: Optional[str] = None,\n",
-    "        loaded_plugin_resource: Optional[str] = None,\n",
-    "        config: Optional[Dict[str, Any]] = None,\n",
-    "        status: Optional[str] = None\n",
-    "    ) -> None:\n",
-    "        \"\"\"\n",
-    "        Update the state of a registered worker.\n",
-    "        \n",
-    "        Args:\n",
-    "            pid: Process ID of the worker\n",
-    "            job_id: Optional job ID to update\n",
-    "            plugin_id: Optional plugin ID to update\n",
-    "            plugin_name: Optional plugin name to update\n",
-    "            loaded_plugin_resource: Optional loaded plugin resource to update\n",
-    "            config: Optional config to update\n",
-    "            status: Optional status to update\n",
-    "        \"\"\"\n",
+    "        pid:int, # Process ID of the worker\n",
+    "        job_id:Optional[str]=None, # Optional job ID to update\n",
+    "        plugin_id:Optional[str]=None, # Optional plugin ID to update\n",
+    "        plugin_name:Optional[str]=None, # Optional plugin name to update\n",
+    "        loaded_plugin_resource:Optional[str]=None, # Optional loaded plugin resource to update\n",
+    "        config:Optional[Dict[str, Any]]=None, # Optional config to update\n",
+    "        status:Optional[str]=None # Optional status to update\n",
+    "    ):\n",
+    "        \"\"\"Update the state of a registered worker.\"\"\"\n",
     "        if pid not in self._worker_states:\n",
     "            return\n",
     "\n",
@@ -404,13 +367,11 @@
     "        if status is not None:\n",
     "            worker.status = status\n",
     "\n",
-    "    def unregister_worker(self, pid: int) -> None:\n",
-    "        \"\"\"\n",
-    "        Unregister a worker process.\n",
-    "        \n",
-    "        Args:\n",
-    "            pid: Process ID of the worker to unregister\n",
-    "        \"\"\"\n",
+    "    def unregister_worker(\n",
+    "        self,\n",
+    "        pid:int # Process ID of the worker to unregister\n",
+    "    ):\n",
+    "        \"\"\"Unregister a worker process.\"\"\"\n",
     "        if pid in self._worker_states:\n",
     "            worker = self._worker_states[pid]\n",
     "            \n",
@@ -423,104 +384,73 @@
     "                del self._job_to_pid[worker.job_id]\n",
     "            del self._worker_states[pid]\n",
     "\n",
-    "    def get_worker_by_pid(self, pid: int) -> Optional[WorkerState]:\n",
+    "    def get_worker_by_pid(\n",
+    "        self,\n",
+    "        pid:int # Process ID\n",
+    "    ) -> Optional[WorkerState]: # Worker state or None\n",
     "        \"\"\"Get worker state by PID.\"\"\"\n",
     "        return self._worker_states.get(pid)\n",
     "\n",
-    "    def get_worker_by_job(self, job_id: str) -> Optional[WorkerState]:\n",
+    "    def get_worker_by_job(\n",
+    "        self,\n",
+    "        job_id:str # Job ID\n",
+    "    ) -> Optional[WorkerState]: # Worker state or None\n",
     "        \"\"\"Get worker state by job ID.\"\"\"\n",
     "        pid = self._job_to_pid.get(job_id)\n",
     "        if pid:\n",
     "            return self._worker_states.get(pid)\n",
     "        return None\n",
     "\n",
-    "    def get_all_workers(self) -> List[WorkerState]:\n",
+    "    def get_all_workers(self) -> List[WorkerState]: # List of all registered workers\n",
     "        \"\"\"Get all registered workers.\"\"\"\n",
     "        return list(self._worker_states.values())\n",
     "\n",
-    "    def get_app_pids(self) -> Set[int]:\n",
+    "    def get_app_pids(self) -> Set[int]: # Set of all PIDs managed by this application (parents only)\n",
     "        \"\"\"Get all PIDs managed by this application (parents only).\"\"\"\n",
     "        return set(self._worker_states.keys())\n",
     "    \n",
-    "    def get_all_app_pids_including_children(self) -> Set[int]:\n",
-    "        \"\"\"Get all PIDs managed by this application including child processes.\n",
-    "        \n",
-    "        Returns:\n",
-    "            Set of all PIDs (parents and children)\n",
-    "        \"\"\"\n",
+    "    def get_all_app_pids_including_children(self) -> Set[int]: # Set of all PIDs (parents and children)\n",
+    "        \"\"\"Get all PIDs managed by this application including child processes.\"\"\"\n",
     "        all_pids = set(self._worker_states.keys())\n",
     "        for worker in self._worker_states.values():\n",
     "            all_pids.update(worker.child_pids)\n",
     "        return all_pids\n",
     "\n",
-    "    def get_workers_by_type(self, worker_type: str) -> List[WorkerState]:\n",
-    "        \"\"\"\n",
-    "        Get all workers of a specific type.\n",
-    "        \n",
-    "        Args:\n",
-    "            worker_type: Type of worker (e.g., \"transcription\", \"llm\", \"ollama\")\n",
-    "        \n",
-    "        Returns:\n",
-    "            List of workers matching the type\n",
-    "        \"\"\"\n",
+    "    def get_workers_by_type(\n",
+    "        self,\n",
+    "        worker_type:str # Type of worker (e.g., \"transcription\", \"llm\", \"ollama\")\n",
+    "    ) -> List[WorkerState]: # List of workers matching the type\n",
+    "        \"\"\"Get all workers of a specific type.\"\"\"\n",
     "        return [w for w in self._worker_states.values() if w.worker_type == worker_type]\n",
     "\n",
-    "    def get_active_worker_types(self) -> Set[str]:\n",
-    "        \"\"\"\n",
-    "        Get set of all active worker types.\n",
-    "        \n",
-    "        Returns:\n",
-    "            Set of worker type strings\n",
-    "        \"\"\"\n",
+    "    def get_active_worker_types(self) -> Set[str]: # Set of worker type strings\n",
+    "        \"\"\"Get set of all active worker types.\"\"\"\n",
     "        return {w.worker_type for w in self._worker_states.values()}\n",
     "\n",
-    "    def has_worker_type(self, worker_type: str) -> bool:\n",
-    "        \"\"\"\n",
-    "        Check if a worker of the specified type exists.\n",
-    "        \n",
-    "        Args:\n",
-    "            worker_type: Type of worker to check\n",
-    "        \n",
-    "        Returns:\n",
-    "            True if at least one worker of this type exists\n",
-    "        \"\"\"\n",
+    "    def has_worker_type(\n",
+    "        self,\n",
+    "        worker_type:str # Type of worker to check\n",
+    "    ) -> bool: # True if at least one worker of this type exists\n",
+    "        \"\"\"Check if a worker of the specified type exists.\"\"\"\n",
     "        return any(w.worker_type == worker_type for w in self._worker_states.values())\n",
     "    \n",
-    "    def get_cloud_workers(self) -> List[WorkerState]:\n",
-    "        \"\"\"Get all workers using cloud/remote resources.\n",
-    "        \n",
-    "        Returns:\n",
-    "            List of workers with is_remote=True\n",
-    "        \"\"\"\n",
+    "    def get_cloud_workers(self) -> List[WorkerState]: # List of workers with is_remote=True\n",
+    "        \"\"\"Get all workers using cloud/remote resources.\"\"\"\n",
     "        return [w for w in self._worker_states.values() if w.is_remote]\n",
     "    \n",
-    "    def estimate_total_cloud_cost(self, duration_hours: float = 1.0) -> float:\n",
-    "        \"\"\"Estimate total cost of all running cloud resources.\n",
-    "        \n",
-    "        Args:\n",
-    "            duration_hours: Duration to estimate for (default 1 hour)\n",
-    "        \n",
-    "        Returns:\n",
-    "            Total estimated cost in USD\n",
-    "        \"\"\"\n",
+    "    def estimate_total_cloud_cost(\n",
+    "        self,\n",
+    "        duration_hours:float=1.0 # Duration to estimate for\n",
+    "    ) -> float: # Total estimated cost in USD\n",
+    "        \"\"\"Estimate total cost of all running cloud resources.\"\"\"\n",
     "        total = 0.0\n",
     "        for worker in self.get_cloud_workers():\n",
     "            if worker.remote_resource and worker.remote_resource.get('estimated_cost_per_hour'):\n",
     "                total += worker.remote_resource['estimated_cost_per_hour'] * duration_hours\n",
     "        return total\n",
     "\n",
-    "    def check_gpu_availability(self) -> ResourceConflict:\n",
-    "        \"\"\"\n",
-    "        Check GPU availability and identify conflicts.\n",
-    "        \n",
-    "        Uses configurable GPU memory threshold to determine if external processes\n",
-    "        are using significant GPU resources.\n",
-    "        \n",
-    "        Enhanced to detect child processes from lifecycle-aware plugins.\n",
-    "        \n",
-    "        Returns:\n",
-    "            ResourceConflict with details about GPU usage\n",
-    "        \"\"\"\n",
+    "    def check_gpu_availability(self) -> ResourceConflict: # ResourceConflict with details about GPU usage\n",
+    "        \"\"\"Check GPU availability and identify conflicts. Uses configurable GPU memory threshold to determine if external processes are using significant GPU resources. Enhanced to detect child processes from lifecycle-aware plugins.\"\"\"\n",
     "        try:\n",
     "            from cjm_fasthtml_sysmon.monitors.gpu import get_gpu_info\n",
     "        except ImportError:\n",
@@ -610,16 +540,11 @@
     "            external_processes=external_gpu_processes\n",
     "        )\n",
     "\n",
-    "    def check_memory_availability(self, threshold_percent: float = 90.0) -> ResourceConflict:\n",
-    "        \"\"\"\n",
-    "        Check system memory availability.\n",
-    "        \n",
-    "        Args:\n",
-    "            threshold_percent: Memory usage threshold to consider as conflict\n",
-    "        \n",
-    "        Returns:\n",
-    "            ResourceConflict with details about memory usage\n",
-    "        \"\"\"\n",
+    "    def check_memory_availability(\n",
+    "        self,\n",
+    "        threshold_percent:float=90.0 # Memory usage threshold to consider as conflict\n",
+    "    ) -> ResourceConflict: # ResourceConflict with details about memory usage\n",
+    "        \"\"\"Check system memory availability.\"\"\"\n",
     "        try:\n",
     "            from cjm_fasthtml_sysmon.monitors.processes import get_process_info\n",
     "        except ImportError:\n",
