--- a/nbs/core/validation.ipynb
+++ b/nbs/core/validation.ipynb
@@ -164,38 +164,18 @@
    "source": [
     "#| export\n",
     "def validate_resources_for_job(\n",
-    "    resource_manager,  # ResourceManager instance\n",
-    "    plugin_registry,  # Plugin registry protocol (has get_plugin, load_plugin_config methods)\n",
-    "    get_plugin_resource_requirements,  # Function: (plugin_id, config) -> Dict with requirements\n",
-    "    compare_plugin_resources,  # Function: (config1, config2) -> bool (same resource?)\n",
-    "    get_plugin_resource_identifier,  # Function: (config) -> str (resource ID)\n",
-    "    plugin_id: str,\n",
-    "    plugin_config: Optional[Dict[str, Any]] = None,\n",
-    "    worker_pid: Optional[int] = None,\n",
-    "    worker_type: str = \"transcription\",\n",
-    "    verbose: bool = False\n",
-    ") -> ValidationResult:\n",
-    "    \"\"\"\n",
-    "    Validate if resources are available to run a job with the specified plugin.\n",
-    "    \n",
-    "    This function is dependency-injected with helper functions to avoid tight coupling\n",
-    "    with specific plugin registry implementations.\n",
-    "    \n",
-    "    Args:\n",
-    "        resource_manager: ResourceManager instance\n",
-    "        plugin_registry: Plugin registry with get_plugin, load_plugin_config methods\n",
-    "        get_plugin_resource_requirements: Function to get plugin requirements\n",
-    "        compare_plugin_resources: Function to compare plugin resources\n",
-    "        get_plugin_resource_identifier: Function to get resource ID\n",
-    "        plugin_id: Unique plugin ID\n",
-    "        plugin_config: Plugin configuration (will load if not provided)\n",
-    "        worker_pid: PID of the worker that will run the job (if known)\n",
-    "        worker_type: Type of worker (e.g., \"transcription\", \"llm\", \"ollama\")\n",
-    "        verbose: Whether to print verbose logging\n",
-    "    \n",
-    "    Returns:\n",
-    "        ValidationResult with action to take\n",
-    "    \"\"\"\n",
+    "    resource_manager, # ResourceManager instance\n",
+    "    plugin_registry, # Plugin registry protocol (has get_plugin, load_plugin_config methods)\n",
+    "    get_plugin_resource_requirements, # Function: (plugin_id, config) -> Dict with requirements\n",
+    "    compare_plugin_resources, # Function: (config1, config2) -> bool (same resource?)\n",
+    "    get_plugin_resource_identifier, # Function: (config) -> str (resource ID)\n",
+    "    plugin_id:str, # Unique plugin ID\n",
+    "    plugin_config:Optional[Dict[str, Any]]=None, # Plugin configuration (will load if not provided)\n",
+    "    worker_pid:Optional[int]=None, # PID of the worker that will run the job (if known)\n",
+    "    worker_type:str=\"transcription\", # Type of worker (e.g., \"transcription\", \"llm\", \"ollama\")\n",
+    "    verbose:bool=False # Whether to print verbose logging\n",
+    ") -> ValidationResult: # ValidationResult with action to take\n",
+    "    \"\"\"Validate if resources are available to run a job with the specified plugin. This function is dependency-injected with helper functions to avoid tight coupling with specific plugin registry implementations.\"\"\"\n",
     "    if verbose:\n",
     "        print(f\"\\n=== Resource Validation Started ===\")\n",
     "        print(f\"Plugin ID: {plugin_id}\")\n",
