--- a/nbs/utils/plugin_utils.ipynb
+++ b/nbs/utils/plugin_utils.ipynb
@@ -64,16 +64,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def is_local_plugin(plugin_meta) -> bool:\n",
-    "    \"\"\"\n",
-    "    Check if a plugin is local (vs API-based).\n",
-    "    \n",
-    "    Args:\n",
-    "        plugin_meta: Plugin metadata with config_schema attribute\n",
-    "    \n",
-    "    Returns:\n",
-    "        True if plugin is local, False if API-based\n",
-    "    \"\"\"\n",
+    "def is_local_plugin(\n",
+    "    plugin_meta # Plugin metadata with config_schema attribute\n",
+    ") -> bool: # True if plugin is local, False if API-based\n",
+    "    \"\"\"Check if a plugin is local (vs API-based).\"\"\"\n",
     "    if not hasattr(plugin_meta, 'config_schema') or not plugin_meta.config_schema:\n",
     "        return False\n",
     "\n",
@@ -138,16 +132,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def uses_gpu_device(plugin_config: Dict[str, Any]) -> bool:\n",
-    "    \"\"\"\n",
-    "    Check if a plugin is configured to use GPU.\n",
-    "    \n",
-    "    Args:\n",
-    "        plugin_config: The plugin's current configuration\n",
-    "    \n",
-    "    Returns:\n",
-    "        True if plugin will use GPU, False otherwise\n",
-    "    \"\"\"\n",
+    "def uses_gpu_device(\n",
+    "    plugin_config:Dict[str, Any] # The plugin's current configuration\n",
+    ") -> bool: # True if plugin will use GPU, False otherwise\n",
+    "    \"\"\"Check if a plugin is configured to use GPU.\"\"\"\n",
     "    device = plugin_config.get('device', '').lower()\n",
     "\n",
     "    # Check for explicit GPU indicators\n",
@@ -213,19 +201,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_plugin_resource_identifier(plugin_config: Dict[str, Any]) -> Optional[str]:\n",
-    "    \"\"\"\n",
-    "    Extract the plugin resource identifier from plugin configuration.\n",
-    "    \n",
-    "    Checks common plugin resource configuration keys like 'resource_id', 'model_id', \n",
-    "    'model', 'model_name', etc.\n",
-    "    \n",
-    "    Args:\n",
-    "        plugin_config: The plugin's configuration\n",
-    "    \n",
-    "    Returns:\n",
-    "        Plugin resource identifier string, or None if not found\n",
-    "    \"\"\"\n",
+    "def get_plugin_resource_identifier(\n",
+    "    plugin_config:Dict[str, Any] # The plugin's configuration\n",
+    ") -> Optional[str]: # Plugin resource identifier string, or None if not found\n",
+    "    \"\"\"Extract the plugin resource identifier from plugin configuration. Checks common plugin resource configuration keys like 'resource_id', 'model_id', 'model', 'model_name', etc.\"\"\"\n",
     "    for key in PLUGIN_RESOURCE_CONFIG_KEYS:\n",
     "        if key in plugin_config:\n",
     "            value = plugin_config[key]\n",
@@ -285,19 +264,10 @@
    "source": [
     "#| export\n",
     "def compare_plugin_resources(\n",
-    "    config1: Dict[str, Any],\n",
-    "    config2: Dict[str, Any]\n",
-    ") -> bool:\n",
-    "    \"\"\"\n",
-    "    Compare two plugin configurations to see if they use the same plugin resource.\n",
-    "    \n",
-    "    Args:\n",
-    "        config1: First plugin configuration\n",
-    "        config2: Second plugin configuration\n",
-    "    \n",
-    "    Returns:\n",
-    "        True if both configs specify the same plugin resource, False otherwise\n",
-    "    \"\"\"\n",
+    "    config1:Dict[str, Any], # First plugin configuration\n",
+    "    config2:Dict[str, Any] # Second plugin configuration\n",
+    ") -> bool: # True if both configs specify the same plugin resource, False otherwise\n",
+    "    \"\"\"Compare two plugin configurations to see if they use the same plugin resource.\"\"\"\n",
     "    resource1 = get_plugin_resource_identifier(config1)\n",
     "    resource2 = get_plugin_resource_identifier(config2)\n",
     "\n",
@@ -354,25 +324,11 @@
    "source": [
     "#| export\n",
     "def get_plugin_resource_requirements(\n",
-    "    plugin_id: str,\n",
-    "    plugin_registry,  # Plugin registry with get_plugin, load_plugin_config methods\n",
-    "    plugin_config: Optional[Dict[str, Any]] = None\n",
-    ") -> Dict[str, Any]:\n",
-    "    \"\"\"\n",
-    "    Get resource requirements for a plugin.\n",
-    "    \n",
-    "    Args:\n",
-    "        plugin_id: Unique plugin ID\n",
-    "        plugin_registry: Plugin registry instance\n",
-    "        plugin_config: Optional plugin configuration\n",
-    "    \n",
-    "    Returns:\n",
-    "        Dictionary with resource requirement information:\n",
-    "        - is_local: Whether it's a local plugin\n",
-    "        - uses_gpu: Whether it uses GPU\n",
-    "        - plugin_resource: Resource identifier\n",
-    "        - device: Device configuration\n",
-    "    \"\"\"\n",
+    "    plugin_id:str, # Unique plugin ID\n",
+    "    plugin_registry, # Plugin registry instance with get_plugin, load_plugin_config methods\n",
+    "    plugin_config:Optional[Dict[str, Any]]=None # Optional plugin configuration\n",
+    ") -> Dict[str, Any]: # Dictionary with resource requirement information (is_local, uses_gpu, plugin_resource, device)\n",
+    "    \"\"\"Get resource requirements for a plugin.\"\"\"\n",
     "    plugin_meta = plugin_registry.get_plugin(plugin_id)\n",
     "\n",
     "    if not plugin_meta:\n",
