--- a/nbs/utils/route_helpers.ipynb
+++ b/nbs/utils/route_helpers.ipynb
@@ -60,24 +60,15 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def wrap_card_in_container(content, html_id, card_cls=None, bg_cls=None, shadow_cls=None, **kwargs):\n",
-    "    \"\"\"\n",
-    "    Wrap card content in a Div container with standard styling.\n",
-    "    \n",
-    "    This consolidates the common pattern of wrapping monitoring cards\n",
-    "    in styled containers.\n",
-    "    \n",
-    "    Args:\n",
-    "        content: Card content to wrap\n",
-    "        html_id: HTML ID for the container\n",
-    "        card_cls: Card class (optional, can be provided via DaisyUI)\n",
-    "        bg_cls: Background class (optional, can be provided via DaisyUI)\n",
-    "        shadow_cls: Shadow class (optional, can be provided via Tailwind)\n",
-    "        **kwargs: Additional attributes for the Div\n",
-    "    \n",
-    "    Returns:\n",
-    "        Div: Wrapped card container\n",
-    "    \"\"\"\n",
+    "def wrap_card_in_container(\n",
+    "    content, # Card content to wrap\n",
+    "    html_id, # HTML ID for the container\n",
+    "    card_cls=None, # Card class (optional, can be provided via DaisyUI)\n",
+    "    bg_cls=None, # Background class (optional, can be provided via DaisyUI)\n",
+    "    shadow_cls=None, # Shadow class (optional, can be provided via Tailwind)\n",
+    "    **kwargs # Additional attributes for the Div\n",
+    "): # Wrapped card container (Div)\n",
+    "    \"\"\"Wrap card content in a Div container with standard styling. This consolidates the common pattern of wrapping monitoring cards in styled containers.\"\"\"\n",
     "    # This function provides a reusable pattern but remains flexible\n",
     "    # Applications can provide their own styling classes\n",
     "    \n",
@@ -148,26 +139,12 @@
    "source": [
     "#| export\n",
     "def create_card_update(\n",
-    "    render_fn: Callable, \n",
-    "    info: Dict[str, Any], \n",
-    "    target_id: str, \n",
-    "    swap_type: str = \"outerHTML\"\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Create an OOB swap update for a card.\n",
-    "    \n",
-    "    This consolidates the pattern of creating OOB swaps for card updates\n",
-    "    in SSE streaming.\n",
-    "    \n",
-    "    Args:\n",
-    "        render_fn: Function to render the card\n",
-    "        info: Info dictionary to pass to render function\n",
-    "        target_id: Target HTML ID for the swap\n",
-    "        swap_type: Type of swap (default \"outerHTML\")\n",
-    "    \n",
-    "    Returns:\n",
-    "        OOB swap element\n",
-    "    \"\"\"\n",
+    "    render_fn:Callable, # Function to render the card\n",
+    "    info:Dict[str, Any], # Info dictionary to pass to render function\n",
+    "    target_id:str, # Target HTML ID for the swap\n",
+    "    swap_type:str=\"outerHTML\" # Type of swap\n",
+    "): # OOB swap element\n",
+    "    \"\"\"Create an OOB swap update for a card. This consolidates the pattern of creating OOB swaps for card updates in SSE streaming.\"\"\"\n",
     "    try:\n",
     "        from cjm_fasthtml_sse.helpers import oob_swap\n",
     "        \n",
